--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "pelican-plugins"]
 	path = plugins
 	url = git@github.com:getpelican/pelican-plugins.git
+[submodule "plugins"]
+	path = plugins
+	url = git@github.com:getpelican/pelican-plugins.git
